fixed collapsible overflow

--- a/app/assets/stylesheets/stops.css
+++ b/app/assets/stylesheets/stops.css
@@ -56,6 +56,7 @@ h1 strong{
 .stop-info{
   max-height: 500px;
   transition: max-height 0.5s;
+  overflow: hidden;
 }
 
 .stop{
